# canvas-engineering

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
api/canvas/: index.html
api/connectivity/: index.html
api/graft/: index.html
api/looped_block/: index.html
api/schema/: index.html
api/types/: index.html
canvas_engine/: __init__.py  action_heads.py  canvas.py  cogvideox.py  connectivity.py  curriculum.py  graft.py  looped_block.py  schema.py  sharpening.py
canvas_engineering/: __init__.py  attention.py  canvas.py  checkpoint.py  connectivity.py  dispatch.py  graft.py  schema.py  semantic.py  types.py
concepts/attention-functions/: index.html
concepts/canvas/: index.html
concepts/canvas-types/: index.html
concepts/looped-attention/: index.html
concepts/semantic-types/: index.html
concepts/topology/: index.html
design/canvas-types-spec/: index.html
docs/: index.md
docs/api/: canvas.md  connectivity.md  graft.md  looped_block.md  schema.md  types.md
docs/concepts/: attention-functions.md  canvas-types.md  canvas.md  looped-attention.md  semantic-types.md  topology.md
docs/design/: canvas-types-spec.md
docs/examples/: 01-hello-types.md  02-multi-frequency.md  03-cartpole.md  04-vehicle-fleet.md  05-protein-complex.md  06-air-traffic.md  07-hospital-icu.md  08-minecraft-world-model.md  09-bci.md  10-fusion-reactor.md  11-mars-colony.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/recipes/: computer-use.md  custom.md  multi-agent.md  robot.md
docs/research/: results.md  type-system.md
examples/: 01_hello_canvas_types.py  02_inheritance_and_arrays.py  02_multi_frequency.py  03_cartpole_control.py  03_surgical_robot.py  04_autonomous_vehicle_fleet.py  05_protein_folding_complex.py  06_air_traffic_control.py  07_hospital_icu.py  08_world_model_minecraft.py  09_brain_computer_interface.py  10_nuclear_fusion_reactor.py  11_mars_colony.py  define_canvas.py  index.html  quickstart.py
examples/01-hello-types/: index.html
examples/02-multi-frequency/: index.html
examples/03-cartpole/: index.html
scripts/: generate_canvas_figures.py  generate_diagrams.py  generate_semantic_diagrams.py  generate_topology_diagrams.py
search/: search_index.json
tests/: test_canvas.py  test_connectivity.py  test_graft.py  test_looped_block.py  test_schema.py  test_semantic.py  test_types.py
(+27 files in other folders)
