[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-engine"
version = "0.1.0"
description = "Context engineering for diffusion models. Graft looped attention onto any video diffusion transformer."
readme = "README.md"
license = "Apache-2.0"

[tool.setuptools.packages.find]
include = ["canvas_engine*"]
requires-python = ">=3.9"
authors = [
    {name = "Jacob"},
    {name = "Claude Opus 4.6", email = "noreply@anthropic.com"},
]
keywords = ["diffusion", "transformer", "looped-attention", "video", "robotics", "canvas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "einops>=0.7",
]

[project.optional-dependencies]
cogvideox = ["diffusers>=0.28", "transformers>=4.40", "accelerate"]
data = ["av", "numpy", "Pillow"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/jacobmarks/canvas-engine"
